tests/baselines/reference/typedefCrossModule4.errors.txt
tests/cases/conformance/jsdoc/mod3.js(1,5): error TS2300: Duplicate identifier 'Foo'.
tests/cases/conformance/jsdoc/mod3.js(3,20): error TS2300: Duplicate identifier 'Foo'.


==== tests/cases/conformance/jsdoc/mod3.js (2 errors) ====
    /** @typedef {number} Foo */
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    class Bar { }
    module.exports = { Foo: Bar };
                       ~~~~~~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    
    